AnalisadorSintatico/xamaParser.py
# Generated from xama.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class xamaParser ( Parser ):

    grammarFileName = "xama.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'tmp'", "';'", "'cte'", "'='", "'integer'", 
                     "'char'", "'boolean'", "'string'", "'float'", "','", 
                     "'type'", "'array'", "'['", "']'", "'of'", "'struct'", 
                     "'{'", "'}'", "'function'", "'('", "')'", "':'", "'if'", 
                     "'else'", "'while'", "'do'", "'break'", "'continue'", 
                     "'return'", "'print'", "'&&'", "'||'", "'&'", "'|'", 
                     "'^'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'>>'", "'<<'", "'+'", "'-'", "'*'", "'/'", "'++'", 
                     "'--'", "'!'", "'.'", "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "TRUE", "FALSE", "CHR", "STR", "NUM", "WS" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_var_decl = 3
    RULE_const_decl = 4
    RULE_type = 5
    RULE_id_list = 6
    RULE_type_decl = 7
    RULE_func_decl = 8
    RULE_param_list = 9
    RULE_block = 10
    RULE_var_const_list = 11
    RULE_stmt_list = 12
    RULE_stmt = 13
    RULE_print_stmt = 14
    RULE_expr = 15
    RULE_cond = 16
    RULE_bitwise = 17
    RULE_relational = 18
    RULE_shift = 19
    RULE_add_sub = 20
    RULE_mul_div = 21
    RULE_expr_list = 22
    RULE_lv = 23

    ruleNames =  [ "program", "decl_list", "decl", "var_decl", "const_decl", 
                   "type", "id_list", "type_decl", "func_decl", "param_list", 
                   "block", "var_const_list", "stmt_list", "stmt", "print_stmt", 
                   "expr", "cond", "bitwise", "relational", "shift", "add_sub", 
                   "mul_div", "expr_list", "lv" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    ID=52
    TRUE=53
    FALSE=54
    CHR=55
    STR=56
    NUM=57
    WS=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(xamaParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(xamaParser.EOF, 0)

        def getRuleIndex(self):
            return xamaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = xamaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.decl_list(0)
            self.state = 49
            self.match(xamaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(xamaParser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(xamaParser.Decl_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_list" ):
                listener.enterDecl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_list" ):
                listener.exitDecl_list(self)



    def decl_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xamaParser.Decl_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_decl_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.decl()
            self._ctx.stop = self._input.LT(-1)
            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = xamaParser.Decl_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_decl_list)
                    self.state = 54
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 55
                    self.decl() 
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(xamaParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(xamaParser.Const_declContext,0)


        def type_decl(self):
            return self.getTypedRuleContext(xamaParser.Type_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(xamaParser.Func_declContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = xamaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.var_decl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.const_decl()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.type_decl()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(xamaParser.TypeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(xamaParser.Id_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = xamaParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(xamaParser.T__0)
            self.state = 68
            self.type_()
            self.state = 69
            self.id_list(0)
            self.state = 70
            self.match(xamaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(xamaParser.TypeContext,0)


        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(xamaParser.ExprContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)




    def const_decl(self):

        localctx = xamaParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(xamaParser.T__2)
            self.state = 73
            self.type_()
            self.state = 74
            self.match(xamaParser.ID)
            self.state = 75
            self.match(xamaParser.T__3)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(xamaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def getRuleIndex(self):
            return xamaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = xamaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4503599627371488) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def id_list(self):
            return self.getTypedRuleContext(xamaParser.Id_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)



    def id_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xamaParser.Id_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_id_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(xamaParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = xamaParser.Id_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_id_list)
                    self.state = 84
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 85
                    self.match(xamaParser.T__9)
                    self.state = 86
                    self.match(xamaParser.ID) 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def NUM(self):
            return self.getToken(xamaParser.NUM, 0)

        def type_(self):
            return self.getTypedRuleContext(xamaParser.TypeContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(xamaParser.Const_declContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_decl" ):
                listener.enterType_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_decl" ):
                listener.exitType_decl(self)




    def type_decl(self):

        localctx = xamaParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(xamaParser.T__10)
                self.state = 93
                self.match(xamaParser.ID)
                self.state = 94
                self.match(xamaParser.T__3)
                self.state = 95
                self.match(xamaParser.T__11)
                self.state = 96
                self.match(xamaParser.T__12)
                self.state = 97
                self.match(xamaParser.NUM)
                self.state = 98
                self.match(xamaParser.T__13)
                self.state = 99
                self.match(xamaParser.T__14)
                self.state = 100
                self.type_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(xamaParser.T__10)
                self.state = 102
                self.match(xamaParser.ID)
                self.state = 103
                self.match(xamaParser.T__3)
                self.state = 104
                self.match(xamaParser.T__15)
                self.state = 105
                self.match(xamaParser.T__16)
                self.state = 106
                self.const_decl()
                self.state = 107
                self.match(xamaParser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(xamaParser.T__10)
                self.state = 110
                self.match(xamaParser.ID)
                self.state = 111
                self.match(xamaParser.T__3)
                self.state = 112
                self.type_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(xamaParser.Param_listContext,0)


        def type_(self):
            return self.getTypedRuleContext(xamaParser.TypeContext,0)


        def block(self):
            return self.getTypedRuleContext(xamaParser.BlockContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = xamaParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(xamaParser.T__18)
            self.state = 116
            self.match(xamaParser.ID)
            self.state = 117
            self.match(xamaParser.T__19)
            self.state = 118
            self.param_list(0)
            self.state = 119
            self.match(xamaParser.T__20)
            self.state = 120
            self.match(xamaParser.T__21)
            self.state = 121
            self.type_()
            self.state = 122
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(xamaParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(xamaParser.TypeContext,0)


        def param_list(self):
            return self.getTypedRuleContext(xamaParser.Param_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)



    def param_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xamaParser.Param_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_param_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(xamaParser.ID)
            self.state = 126
            self.match(xamaParser.T__21)
            self.state = 127
            self.type_()
            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = xamaParser.Param_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_param_list)
                    self.state = 129
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 130
                    self.match(xamaParser.T__9)
                    self.state = 131
                    self.match(xamaParser.ID)
                    self.state = 132
                    self.match(xamaParser.T__21)
                    self.state = 133
                    self.type_() 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_const_list(self):
            return self.getTypedRuleContext(xamaParser.Var_const_listContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(xamaParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = xamaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(xamaParser.T__16)
            self.state = 140
            self.var_const_list(0)
            self.state = 141
            self.stmt_list(0)
            self.state = 142
            self.match(xamaParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_const_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(xamaParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(xamaParser.Const_declContext,0)


        def var_const_list(self):
            return self.getTypedRuleContext(xamaParser.Var_const_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_var_const_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_const_list" ):
                listener.enterVar_const_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_const_list" ):
                listener.exitVar_const_list(self)



    def var_const_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xamaParser.Var_const_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_var_const_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 145
                self.var_decl()
                pass
            elif token in [3]:
                self.state = 146
                self.const_decl()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 153
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = xamaParser.Var_const_listContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_var_const_list)
                        self.state = 149
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 150
                        self.var_decl()
                        pass

                    elif la_ == 2:
                        localctx = xamaParser.Var_const_listContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_var_const_list)
                        self.state = 151
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 152
                        self.const_decl()
                        pass

             
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(xamaParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(xamaParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)



    def stmt_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = xamaParser.Stmt_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_stmt_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.stmt()
            self._ctx.stop = self._input.LT(-1)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = xamaParser.Stmt_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_stmt_list)
                    self.state = 161
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 162
                    self.stmt() 
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(xamaParser.ExprContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xamaParser.StmtContext)
            else:
                return self.getTypedRuleContext(xamaParser.StmtContext,i)


        def block(self):
            return self.getTypedRuleContext(xamaParser.BlockContext,0)


        def lv(self):
            return self.getTypedRuleContext(xamaParser.LvContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(xamaParser.Print_stmtContext,0)


        def getRuleIndex(self):
            return xamaParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):
